--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       apiKey: "AIzaSyArL-sDIt0bQuHIDZIDpODjtV8bziQnEDo",
       authDomain: "wire-cut-app.firebaseapp.com",
       projectId: "wire-cut-app",
-      storageBucket: "wire-cut-app.firebasestorage.app",
+      storageBucket: "wire-cut-app.appspot.com",
       messagingSenderId: "683731491281",
       appId: "1:683731491281:web:38587d1f4de9c4640ce8f0"
     };
