--- a/index.html
+++ b/index.html
@@ -4,252 +4,236 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Wire Cut Tracker</title>
-  <link rel="manifest" href="manifest.json" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #1c1c1c;
-      color: #f0f0f0;
       margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: url('https://www.transparenttextures.com/patterns/brushed-alum.png');
+      background-color: #1c1c1c;
+      background-repeat: repeat;
+      color: #eee;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       padding: 1rem;
     }
-    h1, h2, h3 {
+    .container {
+      width: 100%;
+      max-width: 500px;
+      background: rgba(43, 43, 43, 0.95);
+      border: 1px solid #444;
+      border-radius: 10px;
+      padding: 1rem;
+      box-shadow: 0 0 10px #111;
+      display: none;
+    }
+    h1 {
       text-align: center;
       color: #ccc;
     }
-    .auth-container, .day-container {
-      background: #2a2a2a;
-      border-radius: 8px;
-      padding: 1rem;
-      margin: 1rem auto;
-      max-width: 600px;
-    }
     label {
       display: block;
-      margin: 0.3rem 0 0.1rem;
+      margin: 0.5rem 0 0.2rem;
+      color: #aaa;
     }
     input, select, textarea {
       width: 100%;
       padding: 0.5rem;
-      border-radius: 4px;
-      border: 1px solid #555;
       margin-bottom: 0.5rem;
-      background-color: #1a1a1a;
+      border-radius: 5px;
+      border: 1px solid #666;
+      background: #1a1a1a;
       color: #fff;
     }
     button {
-      background-color: #555;
-      color: white;
+      width: 100%;
+      padding: 0.75rem;
+      background: #444;
+      color: #fff;
       border: none;
-      padding: 0.5rem 1rem;
-      margin: 0.3rem 0.5rem 0 0;
-      border-radius: 4px;
-      cursor: pointer;
+      border-radius: 5px;
+      font-weight: bold;
+      margin-top: 0.5rem;
+      transition: 0.2s;
     }
     button:hover {
-      background-color: #777;
+      background: #666;
     }
-    .hidden {
-      display: none;
+    .footer {
+      margin-top: 1rem;
+      font-size: 0.8rem;
+      text-align: center;
+      color: #777;
+    }
+    #logout {
+      background: #a00;
     }
   </style>
 </head>
 <body>
-  <h1>Wire Cut Tracker</h1>
 
-  <div class="auth-container" id="login-box">
-    <h2>Login</h2>
-    <label for="email">Email</label>
-    <input type="email" id="email" placeholder="Email">
-    <label for="password">Password</label>
-    <input type="password" id="password" placeholder="Password">
-    <button onclick="login()">Login</button>
-    <button onclick="signup()">Sign Up</button>
-    <button onclick="forgotPassword()">Forgot Password?</button>
-    <p id="login-error" style="color: red;"></p>
-  </div>
+<div id="login-container">
+  <h2>Login</h2>
+  <label for="email">Email</label>
+  <input type="email" id="email" placeholder="Enter your email" />
 
-  <div id="app" class="hidden"></div>
+  <label for="password">Password</label>
+  <input type="password" id="password" placeholder="Enter your password" />
 
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, sendPasswordResetEmail, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-auth.js";
-    import { getFirestore, collection, addDoc, query, where, getDocs } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js";
+  <button onclick="login()">Login</button>
+  <p id="login-error" style="color: red;"></p>
+</div>
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyArL-sDIt0bQuHIDZIDpODjtV8bziQnEDo",
-      authDomain: "wire-cut-app.firebaseapp.com",
-      projectId: "wire-cut-app",
-      storageBucket: "wire-cut-app.appspot.com",
-      messagingSenderId: "683731491281",
-      appId: "1:683731491281:web:38587d1f4de9c4640ce8f0"
-    };
+<div class="container">
+  <h1>Work Sheet</h1>
 
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const db = getFirestore(app);
+  <label for="coNumber">CO-NUMBER</label>
+  <input type="text" id="coNumber" placeholder="e.g. CO-1023" />
 
-    const days = ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"];
-    const shifts = ["Shift 1", "Shift 2"];
+  <label for="operator">Operator Name</label>
+  <input type="text" id="operator" placeholder="Full name" />
 
-    const appDiv = document.getElementById("app");
+  <label for="shift">Shift</label>
+  <select id="shift">
+    <option value="Morning">Morning</option>
+    <option value="Afternoon">Afternoon</option>
+    <option value="Night">Night</option>
+  </select>
 
-    function renderTracker() {
-      appDiv.innerHTML = "";
-      days.forEach(day => {
-        const container = document.createElement("div");
-        container.className = "day-container";
-        const title = document.createElement("h2");
-        title.textContent = day;
-        container.appendChild(title);
+  <h3 style="color:#ccc;">Cross Wire</h3>
+  <label for="crossSize">Size (in)</label>
+  <input type="text" id="crossSize" placeholder="e.g. 2.5" />
+  <label for="crossDiameter">Diameter (in)</label>
+  <input type="text" id="crossDiameter" placeholder="e.g. 0.25" />
+  <label for="crossRequired">Required Quantity</label>
+  <input type="number" id="crossRequired" />
+  <label for="crossCut">Cut Quantity</label>
+  <input type="number" id="crossCut" />
+  <label for="crossStart">Start Time</label>
+  <input type="time" id="crossStart" />
+  <label for="crossEnd">End Time</label>
+  <input type="time" id="crossEnd" />
+  <label for="crossMachine">Machine</label>
+  <select id="crossMachine">
+    <option value="1">Machine 1</option>
+    <option value="2">Machine 2</option>
+    <option value="3">Machine 3</option>
+  </select>
 
-        shifts.forEach(shift => {
-          const subtitle = document.createElement("h3");
-          subtitle.textContent = shift;
-          container.appendChild(subtitle);
+  <h3 style="color:#ccc;">Long Wire</h3>
+  <label for="longSize">Size (in)</label>
+  <input type="text" id="longSize" placeholder="e.g. 4.0" />
+  <label for="longDiameter">Diameter (in)</label>
+  <input type="text" id="longDiameter" placeholder="e.g. 0.25" />
+  <label for="longRequired">Required Quantity</label>
+  <input type="number" id="longRequired" />
+  <label for="longCut">Cut Quantity</label>
+  <input type="number" id="longCut" />
+  <label for="longStart">Start Time</label>
+  <input type="time" id="longStart" />
+  <label for="longEnd">End Time</label>
+  <input type="time" id="longEnd" />
+  <label for="longMachine">Machine</label>
+  <select id="longMachine">
+    <option value="1">Machine 1</option>
+    <option value="2">Machine 2</option>
+    <option value="3">Machine 3</option>
+  </select>
 
-          const fields = [
-            { id: "operator", label: "Operator Name", type: "text" },
-            { id: "wireType", label: "Wire Type", type: "select", options: ["Cross Wire", "Long Wire"] },
-            { id: "wireSize", label: "Wire Size", type: "text" },
-            { id: "wireDiameter", label: "Wire Diameter", type: "text" },
-            { id: "requiredQty", label: "Required Quantity", type: "number" },
-            { id: "cutQty", label: "Cut Quantity", type: "number" },
-            { id: "machineNum", label: "Machine Number", type: "number" },
-            { id: "notes", label: "Notes", type: "textarea" }
-          ];
+  <label for="notes">Notes</label>
+  <textarea id="notes" rows="4" placeholder="Observations or other details..."></textarea>
 
-          const inputs = {};
+  <button onclick="saveWorkSheet()">Save Work Sheet</button>
+  <button id="logout" onclick="logout()">Logout</button>
 
-          fields.forEach(field => {
-            const label = document.createElement("label");
-            label.textContent = field.label;
-            const input = field.type === "select" ? document.createElement("select") :
-                           field.type === "textarea" ? document.createElement("textarea") :
-                           document.createElement("input");
+  <div class="footer">© 2025 WireTrack Systems</div>
+</div>
 
-            if (field.type === "select") {
-              field.options.forEach(opt => {
-                const option = document.createElement("option");
-                option.value = opt;
-                option.textContent = opt;
-                input.appendChild(option);
-              });
-            } else {
-              input.type = field.type;
-            }
-            input.id = `${day}-${shift}-${field.id}`;
-            inputs[field.id] = input;
-            container.appendChild(label);
-            container.appendChild(input);
-          });
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
+  import { getAuth, signInWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-auth.js";
+  import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js";
 
-          const saveBtn = document.createElement("button");
-          saveBtn.textContent = "Save Work Sheet";
-          saveBtn.onclick = async () => {
-            const user = auth.currentUser;
-            if (!user) return alert("Not logged in");
-            const sheet = {
-              operator: inputs.operator.value,
-              wireType: inputs.wireType.value,
-              wireSize: inputs.wireSize.value,
-              wireDiameter: inputs.wireDiameter.value,
-              requiredQty: inputs.requiredQty.value,
-              cutQty: inputs.cutQty.value,
-              machineNum: inputs.machineNum.value,
-              notes: inputs.notes.value,
-              user: user.email,
-              day,
-              shift,
-              timestamp: new Date().toISOString()
-            };
-            await addDoc(collection(db, "worksheets"), sheet);
-            alert("Saved successfully!");
-          };
-          container.appendChild(saveBtn);
+  const firebaseConfig = {
+    apiKey: "AIzaSyArL-sDIt0bQuHIDZIDpODjtV8bziQnEDo",
+    authDomain: "wire-cut-app.firebaseapp.com",
+    projectId: "wire-cut-app",
+    storageBucket: "wire-cut-app.firebasestorage.app",
+    messagingSenderId: "683731491281",
+    appId: "1:683731491281:web:38587d1f4de9c4640ce8f0"
+  };
 
-          const viewBtn = document.createElement("button");
-          viewBtn.textContent = "View History";
-          viewBtn.onclick = async () => {
-            const user = auth.currentUser;
-            if (!user) return alert("Not logged in");
-            const q = query(collection(db, "worksheets"), where("user", "==", user.email), where("day", "==", day), where("shift", "==", shift));
-            const snapshot = await getDocs(q);
-            if (!snapshot.empty) {
-              const latest = snapshot.docs[snapshot.docs.length - 1].data();
-              for (const key in inputs) {
-                if (latest[key] !== undefined) {
-                  inputs[key].value = latest[key];
-                }
-              }
-              alert("History loaded");
-            } else {
-              alert("No history found");
-            }
-          };
-          container.appendChild(viewBtn);
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+  const db = getFirestore(app);
 
-          const logoutBtn = document.createElement("button");
-          logoutBtn.textContent = "Logout";
-          logoutBtn.onclick = () => signOut(auth);
-          container.appendChild(logoutBtn);
-        });
+  window.login = function () {
+    const email = document.getElementById('email').value;
+    const password = document.getElementById('password').value;
 
-        appDiv.appendChild(container);
+    signInWithEmailAndPassword(auth, email, password)
+      .then(() => {
+        document.getElementById('login-container').style.display = 'none';
+        document.querySelector('.container').style.display = 'block';
+      })
+      .catch((error) => {
+        document.getElementById('login-error').innerText = "Login failed: " + error.message;
       });
-    }
+  };
 
-    window.login = function () {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-      signInWithEmailAndPassword(auth, email, password)
-        .then(() => {
-          document.getElementById("login-box").classList.add("hidden");
-          document.getElementById("app").classList.remove("hidden");
-          renderTracker();
-        })
-        .catch((error) => {
-          document.getElementById("login-error").innerText = error.message;
-        });
-    };
-
-    window.signup = function () {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-      createUserWithEmailAndPassword(auth, email, password)
-        .then(() => {
-          document.getElementById("login-box").classList.add("hidden");
-          document.getElementById("app").classList.remove("hidden");
-          renderTracker();
-        })
-        .catch((error) => {
-          document.getElementById("login-error").innerText = error.message;
-        });
-    };
-
-    window.forgotPassword = function () {
-      const email = document.getElementById("email").value;
-      if (!email) return alert("Please enter your email to reset password");
-      sendPasswordResetEmail(auth, email)
-        .then(() => {
-          alert("Password reset email sent");
-        })
-        .catch((error) => {
-          alert(error.message);
-        });
-    };
-
-    onAuthStateChanged(auth, (user) => {
-      if (user) {
-        document.getElementById("login-box").classList.add("hidden");
-        document.getElementById("app").classList.remove("hidden");
-        renderTracker();
-      } else {
-        document.getElementById("login-box").classList.remove("hidden");
-        document.getElementById("app").classList.add("hidden");
-      }
+  window.logout = function () {
+    signOut(auth).then(() => {
+      document.getElementById('login-container').style.display = 'block';
+      document.querySelector('.container').style.display = 'none';
     });
-  </script>
+  };
+
+  onAuthStateChanged(auth, (user) => {
+    if (user) {
+      document.getElementById('login-container').style.display = 'none';
+      document.querySelector('.container').style.display = 'block';
+    } else {
+      document.getElementById('login-container').style.display = 'block';
+      document.querySelector('.container').style.display = 'none';
+    }
+  });
+
+  window.saveWorkSheet = async function () {
+    const sheet = {
+      coNumber: document.getElementById('coNumber').value,
+      operator: document.getElementById('operator').value,
+      shift: document.getElementById('shift').value,
+      cross: {
+        size: document.getElementById('crossSize').value,
+        diameter: document.getElementById('crossDiameter').value,
+        required: document.getElementById('crossRequired').value,
+        cut: document.getElementById('crossCut').value,
+        start: document.getElementById('crossStart').value,
+        end: document.getElementById('crossEnd').value,
+        machine: document.getElementById('crossMachine').value
+      },
+      long: {
+        size: document.getElementById('longSize').value,
+        diameter: document.getElementById('longDiameter').value,
+        required: document.getElementById('longRequired').value,
+        cut: document.getElementById('longCut').value,
+        start: document.getElementById('longStart').value,
+        end: document.getElementById('longEnd').value,
+        machine: document.getElementById('longMachine').value
+      },
+      notes: document.getElementById('notes').value,
+      createdAt: new Date().toISOString(),
+      user: auth.currentUser ? auth.currentUser.email : "unknown"
+    };
+
+    try {
+      await addDoc(collection(db, "worksheets"), sheet);
+      alert("✅ Work sheet saved successfully");
+    } catch (e) {
+      console.error("❌ Error saving:", e);
+      alert("❌ Error saving work sheet");
+    }
+  };
+</script>
 </body>
 </html>
